syntax = "proto3";

import "Protos/organization.proto";
import "Protos/locality.proto";
import "Protos/LocalityCost.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "PIS_GrpcService.PIS_GrpcService";

service GrpcContractService {
  rpc GetAll(Empty) returns (ContractsArray);
  rpc Add(GrpcContract) returns (Empty);
  rpc Get(IdRequest) returns (GrpcContract);
  rpc Edit(GrpcContract) returns (Empty);
  rpc Delete(IdRequest) returns (Empty);
}

message GrpcContract {
	int32 Id = 1;
	google.protobuf.Timestamp ConclusionDate = 2;
	google.protobuf.Timestamp EffectiveDate = 3;
	int32 Amount = 4;
	GrpcOrganization Performer = 5;
	LocalityCostArray LocalityCosts = 6;
}

message ContractsArray {
	repeated GrpcContract list = 1;
}